src/objects/Resultado_Datacredito__c.object
<CustomObject>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Resultados Datacredito</relationshipLabel>
        <relationshipName>Resultados_Datacredito</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Datacredito__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Datacredito</label>
        <referenceTo>Datacredito__c</referenceTo>
        <relationshipLabel>Resultados Datacredito</relationshipLabel>
        <relationshipName>Resultados_Datacredito</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LogRespuesta__c</fullName>
        <label>LogRespuesta</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_Error__c</fullName>
        <label>Log Error</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Consulta__c</fullName>
        <label>No. Consulta</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_Consultas__c</fullName>
        <label>Número de Consultas</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observaciones__c</fullName>
        <label>Observaciones</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Oportunidad__c</fullName>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Resultados Datacredito</relationshipLabel>
        <relationshipName>Resultados_Datacredito</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Score_Data__c</fullName>
        <formula>Datacredito__r.Puntaje__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score de Data</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Cliente__c</fullName>
        <label>Tipo Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deudor</fullName>
                </value>
                <value>
                    <fullName>Codeudor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Resultado Datacredito</label>
    <nameField>
        <displayFormat>RD-{000000}</displayFormat>
        <label>Id Resultado Datacredito</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resultados Datacredito</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>